# ModelViewer

./: CMakeLists.txt  README.md  build_windows_debug.bat  build_windows_release.bat  clean_windows.bat
assets/aventador/: license.txt  scene.gltf
assets/c63/: license.txt  scene.gltf
assets/m5/: license.txt  scene.gltf
assets/rs7/: license.txt  scene.gltf
assets/shaders/: line.frag  line.vert  overlay.frag  overlay.vert  phong.frag  phong.vert
src/: main.cpp
src/app/: ModelViewerApp.cpp  ModelViewerApp.hpp
src/core/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Input.cpp  Input.hpp  OrbitCamera.cpp  OrbitCamera.hpp  Renderer.hpp  Timer.hpp  Window.hpp
src/gfx/: GridAxes.cpp  GridAxes.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  TextOverlay.cpp  TextOverlay.hpp
src/platform/glfw/: GlfwWindow.cpp  GlfwWindow.hpp
src/scenes/: CubeScene.cpp  CubeScene.hpp  ModelScene.cpp  ModelScene.hpp  TriangleScene.cpp  TriangleScene.hpp
